examples/secure-cluster/releases/contour/network_policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-contour-apiserver-access
  namespace: netic-oaas-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: contour
  policyTypes:
    - Egress
  egress:
    - ports:
      - protocol: TCP
        port: 443
      - protocol: TCP
        port: 6443
